--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     tools:context="com.chris.tatusafety.HistoryActivity">
     <ListView
+        android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/historyList">
