--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,28 +1,21 @@
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
 xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/view_root"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.chris.tatusafety.LoginActivity">
+tools:context="com.chris.tatusafety.LoginActivity"
+    android:background="@drawable/bg_wave">
 
 
 <ImageView
     android:id="@+id/background"
     android:layout_width="0dp"
-    android:layout_height="0dp"
-    android:scaleType="centerCrop"
-    app:srcCompat="@drawable/bg_wave"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintBottom_toBottomOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    app:layout_constraintVertical_bias="1.0" />
+    android:layout_height="0dp" />
 
 <TextView
     android:id="@+id/title"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
     android:textColor="@android:color/white"
@@ -31,20 +24,30 @@ tools:context="com.chris.tatusafety.LoginActivity">
     android:textAlignment="center"
     android:drawableTop="@drawable/logo_surf_connect"
     android:drawablePadding="30dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintTop_toTopOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    android:layout_marginTop="8dp"
-    app:layout_constraintBottom_toBottomOf="@+id/background"
-    android:layout_marginBottom="8dp"
-    app:layout_constraintVertical_bias="0.261" />
+    android:layout_marginTop="90dp"
+    />
+    <Button
+        android:id="@+id/email_login_button"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:text="Proceed with Email"
+        style="@style/Base.Widget.AppCompat.Button.Borderless"
+        android:textColor="@android:color/white"
+        android:background="@drawable/login_button_selector"
+        android:textSize="16sp"
+        android:textAlignment="center"
+        android:onClick="onEmailLogin"
+        android:layout_marginLeft="16dp"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="300dp"
+        />
 
 <Button
     android:id="@+id/phone_login_button"
-    android:layout_width="0dp"
+    android:layout_width="match_parent"
     android:layout_height="50dp"
-    android:text="@string/login_phone_label"
+    android:text="Proceed with phone number"
     style="@style/Base.Widget.AppCompat.Button.Borderless"
     android:textColor="@android:color/white"
     android:background="@drawable/login_button_selector"
@@ -54,36 +57,15 @@ tools:context="com.chris.tatusafety.LoginActivity">
     android:layout_marginLeft="16dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="8dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintBottom_toTopOf="@+id/email_login_button"
-    android:layout_marginTop="0dp"
-    app:layout_constraintTop_toBottomOf="parent" />
+    android:layout_marginTop="370dp" />
 
-<Button
-    android:id="@+id/email_login_button"
-    android:layout_width="0dp"
-    android:layout_height="50dp"
-    android:text="@string/login_email_label"
-    style="@style/Base.Widget.AppCompat.Button.Borderless"
-    android:textColor="@android:color/white"
-    android:background="@drawable/login_button_selector"
-    android:textSize="16sp"
-    android:textAlignment="center"
-    android:onClick="onEmailLogin"
-    android:layout_marginLeft="16dp"
-    android:layout_marginRight="16dp"
-    app:layout_constraintRight_toRightOf="parent"
-    app:layout_constraintLeft_toLeftOf="parent"
-    app:layout_constraintHorizontal_bias="0.0"
-    android:layout_marginBottom="8dp"
-    app:layout_constraintBottom_toTopOf="@+id/phone_login_button" />
+
 
     <Button
         android:id="@+id/anonymous_login_button"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:text="@string/login_anonymously_label"
+        android:text="Proceed anonymously"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textColor="@android:color/white"
         android:background="@drawable/login_button_selector"
@@ -92,10 +74,6 @@ tools:context="com.chris.tatusafety.LoginActivity">
         android:onClick="onAnonymousLogin"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginBottom="71dp"
-        app:layout_constraintBottom_toTopOf="@+id/phone_login_button" />
+        android:layout_marginTop="440dp"/>
 
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
