--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@ android:id="@+id/view_root"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="com.chris.tatusafety.LoginActivity"
-    android:background="@drawable/bg_wave">
+    android:background="@drawable/side_nav_bar">
 
 
 <ImageView
@@ -18,7 +18,7 @@ tools:context="com.chris.tatusafety.LoginActivity"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:text="@string/app_name"
-    android:textColor="@android:color/white"
+    android:textColor="@android:color/black"
     android:textSize="22sp"
     android:textAllCaps="true"
     android:textAlignment="center"
@@ -28,52 +28,64 @@ tools:context="com.chris.tatusafety.LoginActivity"
     />
     <Button
         android:id="@+id/email_login_button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Proceed with Email"
+
         style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:textColor="@android:color/white"
-        android:background="@drawable/login_button_selector"
-        android:textSize="16sp"
         android:textAlignment="center"
         android:onClick="onEmailLogin"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
-        android:layout_marginBottom="8dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="270dp"
+        android:text="Login with email"
+        android:textColor="#ffff"
+        android:textSize="16sp"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"
         />
 
 <Button
     android:id="@+id/phone_login_button"
-    android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:text="Proceed with phone number"
+    android:text="login with phone"
     style="@style/Base.Widget.AppCompat.Button.Borderless"
-    android:textColor="@android:color/white"
-    android:background="@drawable/login_button_selector"
-    android:textSize="16sp"
     android:textAlignment="center"
     android:onClick="onPhoneLogin"
-    android:layout_marginLeft="16dp"
+    android:layout_marginLeft="45dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginTop="370dp" />
+    android:layout_marginTop="350dp"
+    android:textColor="#ffff"
+    android:textSize="16sp"
+    android:layout_width="270dp"
+    android:layout_height="60dp"
+    android:background="@drawable/buttonshape"
+    android:shadowColor="#A8A8A8"
+    android:shadowDx="0"
+    android:shadowDy="0"
+    android:shadowRadius="5"/>
 
 
 
     <Button
         android:id="@+id/anonymous_login_button"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:text="Proceed anonymously"
+        android:text="login anonymously"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
-        android:textColor="@android:color/white"
-        android:background="@drawable/login_button_selector"
-        android:textSize="16sp"
         android:textAlignment="center"
         android:onClick="onAnonymousLogin"
-        android:layout_marginLeft="16dp"
+        android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="440dp"/>
+        android:layout_marginTop="430dp"
+        android:textColor="#ffff"
+        android:textSize="16sp"
+        android:layout_width="270dp"
+        android:layout_height="60dp"
+        android:background="@drawable/buttonshape"
+        android:shadowColor="#A8A8A8"
+        android:shadowDx="0"
+        android:shadowDy="0"
+        android:shadowRadius="5"/>
 
 </RelativeLayout>
