--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -59,7 +59,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="time"
-                android:hint="Set Time" />
+                android:hint="Enter the time" />
         </android.support.design.widget.TextInputLayout>
 
         <!-- Road Label -->
@@ -73,7 +73,7 @@
                 android:id="@+id/edtRoadName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Road name?"
+                android:hint="Enter the road name"
                 android:inputType="textCapWords" />
         </android.support.design.widget.TextInputLayout>
 
@@ -88,7 +88,7 @@
                 android:id="@+id/edtSacco"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Sacco Name?"
+                android:hint="Enter the sacco name"
                 android:inputType="textCapWords" />
         </android.support.design.widget.TextInputLayout>
 
@@ -103,7 +103,7 @@
                 android:id="@+id/edtPlates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Car Plates?"
+                android:hint="Enter NO. plates"
                 android:inputType="textCapCharacters" />
         </android.support.design.widget.TextInputLayout>
 
@@ -118,7 +118,7 @@
                 android:id="@+id/edtCounty"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="County?"
+                android:hint="Enter the county"
                 android:inputType="textCapWords" />
         </android.support.design.widget.TextInputLayout>
 
@@ -132,7 +132,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:inputType="textMultiLine"
-                android:hint="Exra info?"/>
+                android:hint="Additional information"/>
         </android.support.design.widget.TextInputLayout>
 
         <!-- Report Button -->
@@ -142,6 +142,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
             android:layout_marginBottom="24dp"
+            android:background="@drawable/buttonshape"
             android:padding="12dp"
             android:text="Send Report"/>
 
