Added activity for stages connected to firebase and changed the google services.json file

--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -103,7 +103,7 @@
                 android:id="@+id/edtPlates"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:hint="Enter NO. plates"
+                android:hint="Enter No. plate"
                 android:inputType="textCapCharacters" />
         </android.support.design.widget.TextInputLayout>
 
