--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,11 +6,17 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.chris.tatusafety.HistoryActivity">
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="stages"
+        android:id="@+id/stageNav"/>
     <ListView
         android:padding="5dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/historyList">
     </ListView>
+
 
 </LinearLayout>
