--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -22,6 +22,10 @@
             android:icon="@drawable/ic_mail_outline"
             android:title="My reports" />
         <item
+            android:id="@+id/finds"
+            android:icon="@drawable/ic_mail_outline"
+            android:title="other find me" />
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person_pin"
             android:title="@string/nav_profile"/>
