--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,20 +5,21 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.chris.tatusafety.MapsActivity">
+    tools:context="com.chris.tatusafety.maps.MapsActivity">
 
 
 <EditText
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:id="@+id/etOrigin"
-android:hint="Enter origin address"/>
+android:hint="Where are you "
+    android:textStyle="italic"/>
 
 <EditText
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:id="@+id/etDestination"
-android:hint="Enter destination address"/>
+android:hint="Where are you going"/>
 
 <LinearLayout
 android:layout_width="match_parent"
@@ -27,15 +28,14 @@ android:layout_height="wrap_content">
 <Button
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:text="Find Path"
+    android:text="Find the way"
     android:id="@+id/btnFindPath"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="take me back to main"
         android:id="@+id/mainback"
-        android:layout_marginTop="50dp"
-        android:layout_marginRight="4dp"/>
+        android:layout_marginTop="0dp"/>
 
 <ImageView
     android:layout_width="40dp"
