--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="accountLabel">#7d97ad</color>
     <color name="accountText">#61727f</color>
     <color name="accountLogoutLabel">#fc6240</color>
+    <color name="blue">#6E5CA5</color>
 
     <color name="ak_background">#d5f0ec</color>
     <color name="ak_text">#61727f</color>
