--- a/app/src/main/res/drawable/side_nav_bar.xml
+++ b/app/src/main/res/drawable/side_nav_bar.xml
@@ -1,9 +1,9 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
     <gradient
-        android:angle="135"
-        android:startColor="#3Ad181"
-        android:centerColor="#B6F9A9"
-        android:endColor="#C9E9C9"
+        android:angle="90"
+        android:startColor="#3FF781"
+        android:centerColor="#C6FFA9"
+        android:endColor="#C9FFC9"
         android:type="linear" />
 </shape>
