--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/accountBackground"
-    tools:context="com.chris.tatusafety.AccountActivity">
+    tools:context="com.chris.tatusafety.UI.AccountActivity">
 
     <ImageView
         android:id="@+id/profile_image"
