--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -5,7 +5,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chris.tatusafety.HistoryActivity">
+    tools:context="com.chris.tatusafety.UI.HistoryActivity">
 
     <ListView
         android:padding="5dp"
