--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,7 +4,7 @@ xmlns:tools="http://schemas.android.com/tools"
 android:id="@+id/view_root"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
-tools:context="com.chris.tatusafety.LoginActivity"
+tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:background="@drawable/side_nav_bar">
 
 
