--- a/app/src/main/res/layout/activity_speed.xml
+++ b/app/src/main/res/layout/activity_speed.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.chris.tatusafety.SpeedActivity">
+    tools:context="com.chris.tatusafety.UI.SpeedActivity">
 
 
     <TextView
