--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -26,6 +26,10 @@
             android:icon="@drawable/ic_mail_outline"
             android:title="other find me" />
         <item
+            android:id="@+id/twitter"
+            android:icon="@drawable/ic_mail_outline"
+            android:title="Traffic Updates" />
+        <item
             android:id="@+id/nav_profile"
             android:icon="@drawable/ic_person_pin"
             android:title="@string/nav_profile"/>
