--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -5,7 +5,7 @@ android:id="@+id/view_root"
 android:layout_width="match_parent"
 android:layout_height="match_parent"
 tools:context="com.chris.tatusafety.UI.LoginActivity"
-    android:background="@drawable/side_nav_bar">
+    android:background="@drawable/blue">
 
 
 <ImageView
@@ -36,7 +36,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:layout_marginRight="16dp"
         android:layout_marginTop="270dp"
         android:text="Login with email"
-        android:textColor="#ffff"
+        android:textColor="#AE8799"
         android:textSize="16sp"
         android:layout_width="270dp"
         android:layout_height="60dp"
@@ -57,7 +57,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="8dp"
     android:layout_marginTop="350dp"
-    android:textColor="#ffff"
+    android:textColor="#AE8799"
     android:textSize="16sp"
     android:layout_width="270dp"
     android:layout_height="60dp"
@@ -78,7 +78,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="430dp"
-        android:textColor="#ffff"
+        android:textColor="#AE8799"
         android:textSize="16sp"
         android:layout_width="270dp"
         android:layout_height="60dp"
