--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -5,7 +5,7 @@
     android:id="@+id/view_root"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/accountBackground"
+    android:background="@color/blue"
     tools:context="com.chris.tatusafety.UI.AccountActivity">
 
     <ImageView
@@ -16,7 +16,8 @@
         app:srcCompat="@drawable/icon_profile_empty"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+    />
 
     <View
         android:layout_width="0dp"
@@ -38,7 +39,8 @@
         android:text="@string/id_label"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/profile_image" />
+        app:layout_constraintTop_toBottomOf="@+id/profile_image"
+     />
 
     <TextView
         android:id="@+id/id"
