--- a/app/src/main/res/layout/activity_tweets.xml
+++ b/app/src/main/res/layout/activity_tweets.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.chris.tatusafety.UI.TweetsActivity"
-    android:background="@drawable/side_nav_bar">
+    android:background="@drawable/blue">
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/trafficTextView"
-        android:textColor="@color/colorAccent"
+        android:textColor="#000"
         android:textSize="30sp"
         android:textStyle="bold"
         android:paddingTop="10dp"
@@ -22,7 +22,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tweetsRecyclerView"
-        android:layout_below="@+id/trafficTextView" />
+        android:layout_below="@+id/trafficTextView"
+        android:padding="0dp"/>
 
 
 </RelativeLayout>
