--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+    android:orientation="vertical"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-   >
+    android:layout_margin="8dp">
 
 
     <TextView
@@ -10,9 +11,10 @@
         android:layout_height="wrap_content"
         android:text="Twitter User"
         android:textColor="#000"
-        android:textAlignment="center"
+       android:textStyle="bold"
         android:textSize="20sp"
-        android:id="@+id/tweetUserTextView" />
+        android:id="@+id/tweetUserTextView"
+        android:layout_marginBottom="10dp"/>
 
     <TextView
         android:layout_width="match_parent"
@@ -21,9 +23,9 @@
         android:textSize="20sp"
         android:textColor="#000"
         android:textStyle="italic"
-        android:padding="20dp"
-        android:layout_marginBottom="2dp"
+        android:layout_marginLeft="20dp"
         android:id="@+id/tweetTextView"
-        />
+        android:padding="0dp"
+        android:layout_marginBottom="2dp"/>
 
 </LinearLayout>
