--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="270dp"
-        android:text="Login with email"
+        android:text="LOGIN WITH EMAIL"
         android:textColor="#AE8799"
         android:textSize="16sp"
         android:layout_width="270dp"
@@ -49,7 +49,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
 
 <Button
     android:id="@+id/phone_login_button"
-    android:text="login with phone"
+    android:text="LOGIN WITH PHONE"
     style="@style/Base.Widget.AppCompat.Button.Borderless"
     android:textAlignment="center"
     android:onClick="onPhoneLogin"
@@ -71,7 +71,7 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
 
     <Button
         android:id="@+id/anonymous_login_button"
-        android:text="login anonymously"
+        android:text="LOGIN ANONYMOUSLY"
         style="@style/Base.Widget.AppCompat.Button.Borderless"
         android:textAlignment="center"
         android:onClick="onAnonymousLogin"
