--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -19,7 +19,7 @@
 
         android:paddingBottom ="10dip"
 
-        android:text="@string/app_name"
+        android:text="Barabara"
 
         android:textColor="#040404"
 
@@ -48,7 +48,7 @@
 
         android:paddingTop="5dip"
 
-        android:text="@string/altitude_header"
+        android:text="Sacco"
 
         android:textColor="#343434"
 
@@ -63,7 +63,7 @@
         android:layout_height="wrap_content"
 
         android:paddingTop="5dip"
-        android:text="@string/altitude_header"
+        android:text="Date:"
         android:textColor="#343434"
         android:textSize="15dip"
         android:layout_alignParentRight="true"
@@ -81,7 +81,7 @@
         android:layout_height="wrap_content"
 
         android:paddingTop="5dip"
-        android:text="@string/altitude_header"
+        android:text="Time"
         android:textColor="#343434"
         android:textSize="15dip"
         android:layout_below="@+id/tvRoad"
