--- a/app/src/main/res/layout/activity_tweets.xml
+++ b/app/src/main/res/layout/activity_tweets.xml
@@ -5,25 +5,28 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.chris.tatusafety.UI.TweetsActivity"
-    android:background="@drawable/blue">
+    >
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/trafficTextView"
         android:textColor="#000"
         android:textSize="30sp"
         android:textStyle="bold"
         android:paddingTop="10dp"
         android:paddingBottom="10dp"
         android:textAlignment="center"
-        android:text="Traffic Updates" />
+        android:text="Traffic Updates"
+        android:id="@+id/traffic"/>
+
 
     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/tweetsRecyclerView"
-        android:layout_below="@+id/trafficTextView"
-        android:padding="0dp"/>
+        android:padding="0dp"
+       android:layout_below="@+id/traffic"
+        android:layout_margin="0dp"/>
 
 
 </RelativeLayout>
