--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -3,9 +3,9 @@
 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@color/accountLabel"
+    android:background="@drawable/blue"
     android:orientation="horizontal"
-    android:padding="5dip" >
+    android:padding="5dip">
     <!-- ListRow Left side Thumbnail image -->
     <!-- Rightend Arrow -->
     <!-- City-->
