--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -5,60 +5,72 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.chris.tatusafety.UI.HelpActivity"
-    android:background="@drawable/blue">
-    <android.support.v7.widget.AppCompatTextView
+    android:background="@drawable/blue"
+    android:id="@+id/mainView">
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome this is a guide to the application"
-        android:textSize="30sp"/>
+        android:id="@+id/scroller">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="The first page displays reports sent by other users"
-       android:layout_marginTop="100dp"
-        android:drawableLeft="@drawable/ic_action_twitter"
-        android:drawablePadding="20dp"/>
+       android:layout_marginTop="10dp"
+
+        android:drawablePadding="15dp"
+        android:textSize="15sp"
+        android:id="@+id/first"
+        />
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/main"
         android:text="Try it out"
-        android:layout_marginTop="120dp"
-        android:layout_marginLeft="100dp"/>
+       android:layout_below="@id/first"
+        android:layout_marginLeft="100dp"
+        />
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="On the side menu , Stages enables you to search for stages "
-        android:layout_marginTop="170dp"
+        android:layout_below="@id/main"
         android:drawableLeft="@drawable/ic_directions"
-        android:drawablePadding="10dp"/>
+        android:drawablePadding="10dp"
+        android:id="@+id/stager"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/stages"
         android:text="Try it out"
-        android:layout_marginTop="190dp"
+        android:layout_below="@id/stager"
         android:layout_marginLeft="100dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Find me enables you to locate yourself on a map and find the nearest stage"
-        android:layout_marginTop="240dp"
         android:drawableLeft="@drawable/ic_my_location"
+        android:layout_below="@id/stages"
+        android:id="@+id/below_stages"
         android:drawablePadding="10dp"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/find"
         android:text="try it out"
-        android:layout_marginTop="270dp"
+        android:layout_below="@id/below_stages"
         android:layout_marginLeft="100dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_below="@id/find"
+        android:id="@+id/telling"
         android:text="Report enables one to report any malpractice that occurs in a PSV"
-        android:layout_marginTop="320dp"
         android:drawableLeft="@drawable/ic_action_warning"
         android:drawablePadding="10dp"/>
     <Button
@@ -66,14 +78,25 @@
         android:layout_height="wrap_content"
         android:id="@+id/report"
         android:text="try it out"
-        android:layout_marginTop="350dp"
+        android:layout_below="@+id/telling"
         android:layout_marginLeft="100dp"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Traffic Updates"
-        android:layout_marginTop="440dp"
+        android:text="Traffic Updates provides you with the latest crowd sourced traffic updates "
         android:drawableLeft="@drawable/ic_action_twitter"
+        android:layout_below="@id/report"
+        android:id="@+id/below_report"
         android:drawablePadding="10dp"/>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/twitterUpdates"
+        android:text="try it out"
+        android:layout_below="@+id/below_report"
+        android:layout_marginLeft="100dp"/>
+        </LinearLayout>
+
+    </ScrollView>
 
 </RelativeLayout>
