--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -28,8 +28,7 @@
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
         android:layout_margin="@dimen/fab_margin"
-       app:rippleColor="@color/blue"
-        android:background="@color/blue"
+       app:backgroundTint="#fff"
         app:srcCompat="@drawable/com_accountkit_pencil" />
 
 </android.support.design.widget.CoordinatorLayout>
