--- a/app/src/main/res/layout/list_item_layout.xml
+++ b/app/src/main/res/layout/list_item_layout.xml
@@ -3,12 +3,10 @@
 
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/blue"
+
     android:orientation="horizontal"
     android:padding="5dip">
-    <!-- ListRow Left side Thumbnail image -->
-    <!-- Rightend Arrow -->
-    <!-- City-->
+
     <TextView
 
         android:id="@+id/tvRoad"
@@ -23,11 +21,10 @@
 
         android:textColor="#040404"
 
-        android:textSize="25dip"
+        android:textSize="20dip"
 
         android:textStyle="bold"
 
-        android:typeface="sans"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentStart="true" />
@@ -87,4 +84,11 @@
         android:layout_below="@+id/tvRoad"
         android:layout_alignLeft="@+id/tvDate"
         android:layout_alignStart="@+id/tvDate" />
+    <View
+        android:id="@+id/seperator"
+        android:layout_width="fill_parent"
+        android:layout_height="2dp"
+        android:layout_below="@+id/tvTime"
+        android:background="#000" />
+
 </RelativeLayout>
