--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -3,6 +3,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
 
     <TextView
         android:id="@+id/tweetUserTextView"
@@ -35,6 +41,8 @@
         android:layout_height="2dp"
         android:layout_below="@+id/tweetTextView"
         android:background="#000" />
+        </RelativeLayout>
+    </ScrollView>
 
 
 </RelativeLayout>
