--- a/app/src/main/res/layout/activity_new_report.xml
+++ b/app/src/main/res/layout/activity_new_report.xml
@@ -18,14 +18,12 @@
         <TextView
             android:id="@+id/tvLatitudeAuto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
 
         <TextView
             android:id="@+id/tvLongitudeAuto"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            />
+            android:layout_height="match_parent" />
         <TextView
             android:id="@+id/tvSpeedAuto"
             android:layout_width="match_parent"
