--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -12,24 +12,28 @@
         android:layout_height="wrap_content"
         android:src="@drawable/bus"
         android:id="@+id/busrot"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="200dp"/>
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/bus"
-        android:id="@+id/busleft"
-        android:layout_marginLeft="140dp"
-        android:layout_marginTop="200dp"/>
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true" />
+    <!--<ImageView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:src="@drawable/bus"-->
+        <!--android:id="@+id/busleft"-->
+        <!--android:layout_marginLeft="140dp"-->
+        <!--android:layout_marginTop="200dp"/>-->
 
     <TextView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:textSize="12dp"
-        android:textColor="#454545"
+        android:textSize="25dp"
+        android:textColor="@color/lightBlue"
         android:gravity="center_horizontal"
-        android:layout_alignParentBottom="true"
-        android:text="Splash Screen" />
+        android:text="Easing the use of public transport, one PSV at a time "
+        android:layout_marginTop="60dp"
+        android:padding="5dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:id="@+id/textView7" />
 
 </RelativeLayout>
