--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -8,11 +8,12 @@
     tools:context="com.chris.tatusafety.maps.MapsActivity">
 
 
-<EditText
-android:layout_width="match_parent"
-android:layout_height="wrap_content"
-android:id="@+id/etOrigin"
-android:hint="Where are you "
+
+<android.support.design.widget.TextInputEditText
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/etOrigin"
+    android:hint="Where are you "
     android:textStyle="italic"/>
 
 <EditText
@@ -21,60 +22,62 @@ android:layout_height="wrap_content"
 android:id="@+id/etDestination"
 android:hint="Where are you going"/>
 
-<LinearLayout
-android:layout_width="match_parent"
-android:layout_height="wrap_content">
-
-<Button
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="Find the way"
-    android:id="@+id/btnFindPath"/>
-    <Button
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="take me back to main"
-        android:id="@+id/mainback"
-        android:layout_marginTop="0dp"/>
+        android:layout_height="wrap_content">
 
-<ImageView
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="5dp"/>
+        <Button
+            android:id="@+id/btnFindPath"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Find the way" />
 
-<TextView
-    android:layout_marginLeft="5dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="0 km"
-    android:id="@+id/tvDistance" />
+        <Button
+            android:id="@+id/mainback"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="0dp"
+            android:text=" main" />
 
-<ImageView
-    android:layout_marginLeft="20dp"
-    android:layout_marginTop="5dp"
-    android:layout_width="40dp"
-    android:layout_height="40dp"
-    android:padding="5dp" />
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp" />
 
-<TextView
-    android:layout_marginLeft="5dp"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:text="0 min"
-    android:id="@+id/tvDuration" />
+        <TextView
+            android:id="@+id/tvDistance"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="0 km" />
 
-</LinearLayout>
+        <ImageView
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginTop="5dp"
+            android:padding="5dp" />
+
+        <TextView
+            android:id="@+id/tvDuration"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:text="0 min" />
+
+    </LinearLayout>
+
     <TextView
         android:id="@+id/tv_location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
     <fragment
-android:id="@+id/map"
-android:name="com.google.android.gms.maps.SupportMapFragment"
-android:layout_width="match_parent"
-android:layout_height="match_parent" />
+    android:id="@+id/map"
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent" />
 
     </LinearLayout>
 
