--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -17,5 +17,5 @@
 
     <style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
     <style name="AppLoginTheme" parent="Theme.AccountKit"/>
-
+    <style name="Yonko" parent="Theme.AppCompat.Light"></style>
 </resources>
