--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -17,7 +17,6 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:id="@+id/title"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:text="@string/app_name"
     android:textColor="@android:color/black"
     android:textSize="22sp"
     android:textAllCaps="true"
@@ -33,9 +32,9 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:onClick="onEmailLogin"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="230dp"
         android:text="LOGIN WITH EMAIL"
-        android:textColor="#AE8799"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_width="270dp"
         android:layout_height="60dp"
@@ -55,8 +54,8 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
     android:layout_marginLeft="45dp"
     android:layout_marginRight="16dp"
     android:layout_marginBottom="8dp"
-    android:layout_marginTop="350dp"
-    android:textColor="#AE8799"
+    android:layout_marginTop="310dp"
+    android:textColor="#000000"
     android:textSize="16sp"
     android:layout_width="270dp"
     android:layout_height="60dp"
@@ -76,8 +75,8 @@ tools:context="com.chris.tatusafety.UI.LoginActivity"
         android:onClick="onAnonymousLogin"
         android:layout_marginLeft="45dp"
         android:layout_marginRight="16dp"
-        android:layout_marginTop="430dp"
-        android:textColor="#AE8799"
+        android:layout_marginTop="390dp"
+        android:textColor="#000000"
         android:textSize="16sp"
         android:layout_width="270dp"
         android:layout_height="60dp"
