--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -12,15 +12,13 @@
 <android.support.design.widget.TextInputEditText
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:id="@+id/etOrigin"
-    android:hint="Where are you "
-    android:textStyle="italic"/>
+    android:id="@+id/etOrigin" />
 
 <EditText
 android:layout_width="match_parent"
 android:layout_height="wrap_content"
 android:id="@+id/etDestination"
-android:hint="Where are you going"/>
+android:hint="Where to?"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -30,54 +28,51 @@ android:hint="Where are you going"/>
             android:id="@+id/btnFindPath"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Find the way" />
+            android:text="SHOW ON MAP" />
 
-        <Button
-            android:id="@+id/mainback"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="0dp"
-            android:text=" main" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp" />
+
+        <!--<ImageView-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:layout_marginTop="5dp" />-->
 
         <TextView
             android:id="@+id/tvDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
             android:text="0 km" />
 
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:padding="5dp" />
+        <!--<ImageView-->
+            <!--android:layout_width="40dp"-->
+            <!--android:layout_height="40dp"-->
+            <!--android:layout_marginLeft="20dp"-->
+            <!--android:padding="5dp" />-->
 
         <TextView
             android:id="@+id/tvDuration"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="0 min" />
+            android:text="0 min"
+            android:layout_marginLeft="70dp"/>
+        <!--<Button-->
+            <!--android:id="@+id/mainback"-->
+            <!--android:layout_width="wrap_content"-->
+            <!--android:layout_height="wrap_content"-->
+            <!--android:layout_marginTop="0dp"-->
+            <!--android:text="BACK TO MAIN"-->
+            <!--android:layout_marginLeft="0dp"/>-->
 
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tv_location"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
 
     <fragment
     android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent" />
+
+
 
     </LinearLayout>
 
