--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,7 +9,7 @@
     <color name="accountText">#61727f</color>
     <color name="accountLogoutLabel">#fc6240</color>
     <color name="blue">#6E5CA5</color>
-
+    <color name="black">#000000</color>
     <color name="ak_background">#d5f0ec</color>
     <color name="ak_text">#61727f</color>
     <color name="ak_buttonBackground">#09d4b6</color>
@@ -19,7 +19,7 @@
     <color name="ak_inputText">#7d97ad</color>
     <color name="ak_statusBar">#00c5a5</color>
     <color name="ak_icon">#09d4b6</color>
-    <color name="yellow">#DACC3E</color>
+    <color name="yellow">#dacc3e</color>
     <color name="lightBlue">#D3F3EE</color>
     <color name="moonstone">#7FB7BE</color>
 </resources>
