--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -31,7 +31,7 @@
        app:rippleColor="@color/blue"
         android:background="@color/blue"
         app:srcCompat="@drawable/com_accountkit_pencil"
-        app:backgroundTint="#fff"/>
+        app:backgroundTint="@color/yellow"/>
 
 
 
