--- a/app/src/main/res/layout/tweet_list_item.xml
+++ b/app/src/main/res/layout/tweet_list_item.xml
@@ -2,7 +2,8 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    >
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -48,18 +49,12 @@
         android:textColor="#000"
         android:textSize="20sp"
         android:textStyle="italic" />
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Date "
-                android:layout_below="@+id/tweetTextView"
-                android:id="@+id/date"
-                android:layout_marginLeft="240dp"/>
+
 
     <View
         android:id="@+id/seperator"
         android:layout_width="fill_parent"
-        android:layout_height="2dp"
+        android:layout_height="0.5dp"
         android:layout_below="@+id/date"
         android:background="#9EA3B0" />
         </RelativeLayout>
